--- a/investment-calculator/.eslintrc.yml
+++ b/investment-calculator/.eslintrc.yml
@@ -6,5 +6,5 @@ parserOptions:
   ecmaVersion: latest
   sourceType: module
 rules: {
-         'react/prop-types': 'off',
+         "react/proptypes": "off",
 }
