ref: moved parts to another files, added logic to form and table

--- a/investment-calculator/.eslintrc.yml
+++ b/investment-calculator/.eslintrc.yml
@@ -6,5 +6,5 @@ parserOptions:
   ecmaVersion: latest
   sourceType: module
 rules: {
-         "react/proptypes": "off",
+         "react/prop-types": "off",
 }
